--- a/html.html
+++ b/html.html
@@ -15,7 +15,7 @@
             </div>
             <hr/>
             <div>
-                您好，我的名字是吳伯韋，111年於台南應用科技大學餐飲系畢業。目前就職於環境顧問公司，承攬節能相關的工作。</br>
+                您好，我的名字是吳伯韋，於111年月從台南應用科技大學餐飲系畢業。目前就職於環境顧問公司，承攬節能相關的工作。本身主要負責弱勢家庭節能輔助、傳統市場節能方案評估及環境教育宣導講者</br>
                 
             </div>
         </div>
