--- a/html.html
+++ b/html.html
@@ -15,8 +15,7 @@
             </div>
             <hr/>
             <div>
-                您好，我的名字是吳伯韋，於111年月從台南應用科技大學餐飲系畢業。目前就職於環境顧問公司，承攬節能相關的工作。本身主要負責弱勢家庭節能輔助、傳統市場節能方案評估及環境教育宣導講者</br>
-                
+                您好，我的名字是吳伯韋，生長於好山好水的宜蘭，喜好研究新料理以及文章寫作，更是自認對3C沒有抵抗力。民國111年6月從台南應用科技大學餐飲系畢業。目前就職於環境顧問公司，主要承攬節能相關的工作。我的工作職責是負責弱勢家庭節能輔助、傳統市場節能方案評估及擔任校園與社區的節能教育宣導講者。<br/>
             </div>
         </div>
         <div class="box">
