--- a/html.html
+++ b/html.html
@@ -15,7 +15,8 @@
             </div>
             <hr/>
             <div>
-                您好，我的名字是吳伯韋，生長於好山好水的宜蘭，喜好研究新料理以及文章寫作，更是自認對3C沒有抵抗力。民國111年6月從台南應用科技大學餐飲系畢業。目前就職於環境顧問公司，主要承攬節能相關的工作。我的工作職責是負責弱勢家庭節能輔助、傳統市場節能方案評估及擔任校園與社區的節能教育宣導講者。<br/>
+               您好，我的名字叫吳伯韋，是土生土長的宜蘭人，今年23歲。興趣是烘焙及文章寫作，更是自認對3C及科技相關的事物沒有抵抗力。
+111年於台南應用科技大學餐飲系畢業後，回到家鄉，就職於環境工程顧問公司迄今。主以節能與節電改造等相關工作。期間經手弱勢家戶、傳統市場、社區及博物館節電改造等計畫，亦擔任社區及校園節能課程講者。憑藉在這份工作中的經驗與性質下，培養出在專案中須具備的溝通與協作能力，更具備了解決問題的能力。<br/>
             </div>
         </div>
         <div class="box">
