--- a/html.html
+++ b/html.html
@@ -15,8 +15,8 @@
             </div>
             <hr/>
             <div>
-                &nbsp &nbsp您好，我的名字叫吳伯韋，是土生土長的宜蘭人，今年23歲。興趣是烘焙及文章寫作，更是自認對3C及科技相關的事物沒有抵抗力。
-111年於台南應用科技大學餐飲系畢業後，回到家鄉，就職於環境工程顧問公司迄今。主以節能與節電改造等相關工作。期間經手弱勢家戶、傳統市場、社區及博物館節電改造等計畫，亦擔任社區及校園節能課程講者。憑藉在這份工作中的經驗與性質下，培養出在專案中須具備的溝通與協作能力，更具備了解決問題的能力。<br/>
+                &emsp;&emsp;您好，我的名字叫吳伯韋，是土生土長的宜蘭人，今年23歲。興趣是烘焙及文章寫作，更是自認對3C及科技相關的事物沒有抵抗力。<br>
+                &emsp;&emsp;111年於台南應用科技大學餐飲系畢業後，回到家鄉，就職於環境工程顧問公司迄今。主以節能與節電改造等相關工作。期間經手弱勢家戶、傳統市場、社區及博物館節電改造等計畫，亦擔任社區及校園節能課程講者。憑藉在這份工作中的經驗與性質下，培養出在專案中須具備的溝通與協作能力，更具備了解決問題的能力。<br/>
             </div>
         </div>
         <div class="box">
